# OctoPrint-TopTemp

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
octoprint_toptemp/: __init__.py
octoprint_toptemp/static/css/: TopTemp.css
octoprint_toptemp/static/js/: TopTemp.js  TopTemp.js.7E914DEFD1.orig
octoprint_toptemp/templates/: toptemp_navbar.jinja2  toptemp_settings.jinja2
