[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "Top-Temp"
version = "0.0.2.5"
description = "Show temperatures and more in the top bar"
authors = [
    { name = "Mikkel Skovgaard", email = "toptemp@jemi.dk" },
]
requires-python = ">=2.7,<4"
dependencies = [
    "psutil",
]
dynamic = [
    "license",
]

[project.entry-points."octoprint.plugin"]
toptemp = "octoprint_toptemp"

[project.urls]
Homepage = "https://github.com/LazeMSS/OctoPrint-TopTemp"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_toptemp",
    "octoprint_toptemp.*",
]
